--- a/productlistelement.ui
+++ b/productlistelement.ui
@@ -10,6 +10,12 @@
     <height>179</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>179</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -17,11 +23,11 @@
    <string notr="true">background-color: rgb(71, 92, 117);
 color: white;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,7">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,7">
    <item>
     <widget class="QLabel" name="imageLabel">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -64,7 +70,7 @@ color: white;</string>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,0,9,0">
        <item>
-        <widget class="QLabel" name="idLabel">
+        <widget class="QLabel" name="fullNameLabel">
          <property name="text">
           <string/>
          </property>
@@ -114,7 +120,7 @@ color: white;</string>
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="8,2">
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="8,0,2">
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
@@ -129,7 +135,36 @@ color: white;</string>
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="deleteProductButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: transparent;</string>
+         </property>
+         <property name="text">
+          <string>Usuń produkt</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons_white/trash-2.png</normaloff>:/icons_white/trash-2.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="showProductButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
            <horstretch>0</horstretch>
